--- a/app/src/main/res/layout/activity_my_hearts.xml
+++ b/app/src/main/res/layout/activity_my_hearts.xml
@@ -27,8 +27,8 @@
 
             <ImageView
                 android:id="@+id/go_back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:src="@drawable/ic_arrow_left"
                 app:layout_constraintBottom_toBottomOf="@id/store_category"
                 app:layout_constraintStart_toStartOf="parent"
