--- a/app/src/main/res/layout/activity_my_comments.xml
+++ b/app/src/main/res/layout/activity_my_comments.xml
@@ -26,9 +26,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:padding="6dp"
                 android:id="@+id/go_back_arrow"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_arrow_left"
                 app:layout_constraintBottom_toBottomOf="@id/store_category"
                 app:layout_constraintStart_toStartOf="parent"
