--- a/app/src/main/res/layout/activity_my_hearts.xml
+++ b/app/src/main/res/layout/activity_my_hearts.xml
@@ -27,8 +27,9 @@
 
             <ImageView
                 android:id="@+id/go_back_arrow"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
                 android:src="@drawable/ic_arrow_left"
                 app:layout_constraintBottom_toBottomOf="@id/store_category"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,11 +50,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:paddingTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/header_layout"
             android:id="@+id/comments_more_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/header_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
