--- a/app/src/main/res/layout/activity_my_comments.xml
+++ b/app/src/main/res/layout/activity_my_comments.xml
@@ -26,6 +26,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:padding="6dp"
                 android:id="@+id/go_back_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
