--- a/app/src/main/res/layout/fragment_home_slide.xml
+++ b/app/src/main/res/layout/fragment_home_slide.xml
@@ -61,6 +61,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:overScrollMode="never"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/search_layout"
         android:id="@+id/scroll_view"
